made responsive solved line wrap in links

--- a/style.scss
+++ b/style.scss
@@ -9,17 +9,26 @@ html, body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body{
-        width: 400px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
     height: 500px;
     // border: 2px solid black;
     background-color: #181818;
     color: #fcfcfc;
 }
+main{
+    min-width: 50%;
+    // width: 80%;
 .todo-main-container {
        
   padding: 10px;
+  max-width: 600px;
   display: flex;
   width: 100%;
+  min-width: 100% !important;
+//   max-width: fit-content;
+
   align-items: center;
   gap: 10px;
   flex-direction: column;
@@ -32,6 +41,20 @@ body{
         gap: 10px;
         flex-direction: column;
         .shortcuts{
+            .shortcut-link{
+                border-radius: 100px;
+                box-shadow: none;
+                transition: all .2s cubic-bezier(0.65, 0, 0.25, 1);
+                &:hover{
+                    // transform:rotate(360deg);
+                    // padding-bottom: 5px;
+                    // border:  2px solid red;
+        box-shadow: rgb(92, 108, 126) 0px 5px 10px -5px;
+
+                    
+                    scale: 1.1  ;
+                }
+            }
             .shortcut-input-div{
                   display: none;
   flex-direction: column;
@@ -43,7 +66,9 @@ body{
                 gap: 10px;
         // display: flex;
         justify-content: space-between;
-
+                &:hover{
+                    background-color: #222;
+                }
         input{
             transition: border .2s ease;
             color: white;
@@ -85,7 +110,7 @@ body{
   display: flex;
   gap: 10px;
  
-padding:10px 5px 20px 5px ;
+padding:10px 10px 20px 5px ;
 
   &::-webkit-scrollbar {
     height: 8px;
@@ -190,13 +215,24 @@ padding:10px 5px 20px 5px ;
 
     width: 100%;
     display: flex;
-    gap: 10px;
+    // gap: 10px;
     flex-direction: column-reverse;
     max-height: fit-content; 
     overflow-y: auto;
     .task{
-
-        align-items: center;
+        &::after{
+            content: "";
+            display: block;
+            height: 1px;
+            background-color: #494949;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            // margin-top: 5.5rem;
+        }
+        padding: 20px 0;
+        align-items: flex-start;  
         // padding: 5px;
         position: relative;
  
@@ -208,13 +244,19 @@ padding:10px 5px 20px 5px ;
             display:flex;
             gap: 10px;
         }
-        p{  margin-left: 10px;
+                p{  margin-left: 10px;
             display: flex;
             // justify-content: center;
             align-items: baseline;
             gap: 5px;
             font-size: .8rem;
+
             // flex: 1;
+            //   white-space: normal;
+            word-wrap: break-word;
+            word-break: break-word;
+            overflow-wrap: break-word;
+            max-width: 100%;
             
         }
         gap: 10px;
@@ -248,12 +290,13 @@ padding:10px 5px 20px 5px ;
     }
   }
 }
+}
 .shortcut-input-div.active {
   display: flex;
 }
 
 .quote {
-  font-size: 0.rem;
+  font-size: 0.7rem;
   font-style: italic;
   color: #a7a7a7;
   border-left: 3px solid #ccc;
